src/css/index.scss
@import "../../node_modules/normalize.css/normalize.css";
@import "_sakura-theme.scss";
@import "../../node_modules/sakura.css/scss/_main.scss";
@import "../../node_modules/dracula-prism/dist/css/dracula-prism.css";

body {
  max-width: 40em;
}

a {
  border-bottom: 2px solid;
}

a:hover {
  border-width: 0;
}

a:focus {
  border-bottom: 0;
  outline: 4px solid $color-fade;
  outline-offset: 2px;
}

header {
  @extend h1;
  text-align: center;
}

nav {
  margin-bottom: 4rem;
  text-align: center;
}

article h1 {
  margin-bottom: 4rem;
}

pre[class*="language-"] {
  margin-bottom: 2.5rem;
}

table {
  margin-bottom: 2.5rem;
}

@media (max-width: 684px) {
  body {
    font-size: $font-size-base;
  }
}

@media (max-width: 382px) {
  body {
    font-size: $font-size-base;
  }
}

.asdfasfasf {
  background-color: red;
}

.skiplink {
  position: absolute;
  left: -9999em;
}

.skiplink:focus {
  left: 0;
  z-index: 1;
}

#skiplink-container {
  text-align: center;
}

#skiplink-container div {
  text-align: left;
  margin: 0 auto;
  max-width: 1020px;
}

#skiplink-container .skiplink {
  margin-left: 0.75rem;
}

